# Tuned

./: .env.dev  config.py  main.py  pyproject.toml  utils.py
apps/cli/: __init__.py  __main__.py  app.py
apps/cli/screens/: homepage.py  homepage.tcss
apps/cli/widgets/: ascii_title.py  ascii_title.tcss  url_bar.py  url_bar.tcss
apps/server/: api.py  app.py  wrapper.py
cli/: downloader.py  parser.py  repl.py
pakcages/core/: settings.py
pakcages/core/styles/: index.tcss
pakcages/schemas/: resolve.py
tools/url/: convert_video_to_mp3.py
tuned/: main.py  utils.py
tuned.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tuned/cli/: downloader.py  parser.py  repl.py
