[project]
name = "tuned"
version = "0.1.0"
description = "A CLI frontend for searching music and podcasts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pyfiglet>=1.0.2",
    "textual>=8.2.8",
    "flask>=3.1.0",
    "yt-dlp>=2025.6.0",
]

[project.scripts]
tuned = "apps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]
